syntax = "proto3";

package google.protobuf.internal.simple;

import "google/protobuf/internal/simpler_test.proto";

message SimpleMessage {
  string msg = 1;
  oneof personal_or_business {
    bool personal = 2;
    bool business = 3;
  };
  google.protobuf.internal.simpler.SimplerMessage simpler_message = 4;
};

message SimpleMessageRequest {
  SimpleMessage simple_msg = 1;
};

message SimpleMessageResponse {
  bool understood = 1;
};

service SimpleMessageService {
  rpc Tell(SimpleMessageRequest) returns (SimpleMessageResponse);
};
